--- a/styles.CSS
+++ b/styles.CSS
@@ -70,3 +70,11 @@ input[type="submit"] {
 input[type="file"] {
   padding: 1px 2px;
 }
+
+.inline{
+  display: inline; 
+}
+
+a:link{
+  color:#dfdfe2;
+}
